# ticket-reservation

./: README.md  TicketReservation.cabal  seeds.sql
app/: Main.hs
metadata/: README.md  schedules.csv  station_codes.csv  stations.csv  stations.txt  trains.csv
scripts/: build_dataset.rb  generate_train_seats.rb  seeds.sql
src/: API.hs  Api.hs  Config.hs  Lib.hs  Models.hs
src/Api/: Reservation.hs  Schedule.hs  Station.hs  Train.hs  User.hs
test/: Spec.hs
