name:                TicketReservation
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/rpereira/ticket-reservation#readme
license:             BSD3
license-file:        LICENSE
author:              Rui Afonso Pereira
maintainer:          ruiafonsopereira@gmail.com
copyright:           2017 Rui Afonso Pereira
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/rpereira/ticket-reservation

library
  hs-source-dirs:      src
  exposed-modules:     Api
                     , Api.Station
                     , Api.Train
                     , Config
                     , Models
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , monad-logger
                     , mtl
                     , persistent
                     , persistent-postgresql
                     , persistent-template
                     , servant-server
                     , transformers
                     , wai
                     , wai-extra
                     , warp
  default-language:    Haskell2010

executable TicketReservation-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , TicketReservation
                     , monad-logger
                     , persistent-postgresql
                     , safe
                     , wai
                     , warp
  default-language:    Haskell2010

test-suite TicketReservation-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , TicketReservation
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
